@@ -1,6 +1,9 @@
 Form Maker changelog file
 =========================
 
+Next Version
+- Removed deprecated .live() jQuery method - it's replaced by .on()
+
 Version 2.0.0
 - Created possibility to store user answers in database
 - Answers are viewable in admin panel - "Form maker" -> "See answers"
